--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <i class='bx  bx-menu' id="menu-icon"></i> 
 
         <nav class="navbar">
-            <a href="#home" class="active">Home</a>
+            <a href="#home">Home</a>
             <a href="#education">Education</a>
             <a href="#projects">Projects</a>
             <a href="#experiences">Experience</a>
