--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="timeline-dot"></div>
                 <div class="timeline-date">2024</div>
                 <div class="timeline-content">
-                    <h3>Inglish Curse</h3>
+                    <h3>High School</h3>
                     <p>In 2024, I completed high school, ending an important stage of my academic life. This moment marked the end of a cycle of much learning and growth, and represents the beginning of new challenges and opportunities for my future.</p>
                 </div>
             </div>
